tests/ui/rfcs/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-default-method-bodies.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `NonConstImpl: ~const ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:24:18
   |
LL |     NonConstImpl.a();
   |                  ^ the trait `~const ConstDefaultFn` is not implemented for `NonConstImpl`
   |
   = help: the trait `ConstDefaultFn` is implemented for `NonConstImpl`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
